--- a/face/lib/BRF_NXT_JS_EXAMPLES/bin/index.html
+++ b/face/lib/BRF_NXT_JS_EXAMPLES/bin/index.html
@@ -84,6 +84,8 @@
 		The Beyond Reality Face Nxt logo.
 		Please be fair and don't hide the logo! Thanks.
 	-->
+	<div id="backgroundDiv"  style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: red;"></div>
+	<div id="backgroundDivS"  style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: #12DE4E;"></div>
 	<div id="brfLogo" style="display:none">
 		<a href="https://www.beyond-reality-face.com" target="_blank">
 			<img src="media/assets/brf_nxt_logo_black.png" style="opacity:0.35;position:absolute;top:8px;left:9px;"/>
