--- a/webUi/innojam-failed/index_failed.html
+++ b/webUi/innojam-failed/index_failed.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Failed</title>
     <script src="media/js_libs/jquery-1.12.0.min.js"></script>
     <link href="media/css_libs/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="media/js/tester.js"></script>
@@ -310,7 +310,17 @@
         <div class="glyphicon glyphicon glyphicon-remove succeed_icon" id="result-success-icon"></div>
     </div>
 </div>
-
+<!-- Hotjar Tracking Code for http://nvgg.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:156572,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
 <script type="text/javascript">
     d3.json('data2.json', createCodeFlower);
