--- a/webUi/innojam-ok/index.html
+++ b/webUi/innojam-ok/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Success</title>
     <script src="media/js_libs/jquery-1.12.0.min.js"></script>
     <link href="media/css_libs/bootstrap-3.3.6-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="media/js/tester.js"></script>
