--- a/face/lib/BRF_NXT_JS_EXAMPLES/bin/index.html
+++ b/face/lib/BRF_NXT_JS_EXAMPLES/bin/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,11 +10,46 @@
 	<title>Beyond Reality Face Nxt. SDK - Javascript library for Face Tracking, Face Detection and Point Tracking</title>
 
 	<link rel="stylesheet" href="css/brf_examples.css">
+<style type="text/css">
+	.blink_me {
+    -webkit-animation-name: blinker;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
 
+    -moz-animation-name: blinker;
+    -moz-animation-duration: 1s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+
+    animation-name: blinker;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@-moz-keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@-webkit-keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+
+@keyframes blinker {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+}
+</style>
 	<script type="text/javascript" src="js/examples/specials/jquery.min.js"></script>
 	<!--<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
-	
+
 	<!-- MrDoobs Stats: https://github.com/mrdoob/stats.js/ -->
 	<script src="js/lib/stats/stats.min.js"></script>
 
@@ -39,58 +75,66 @@
 		override all other initExample functions and will start only the latest
 		loaded example.
 	-->
-	
+
 	<script src="js/examples/ExampleBase.js"></script>
-	
+
 	<!-- webcam examples -->
-	
-<!--	<script src="js/examples/ExamplePointTracking.js"></script>-->
-<!--	<script src="js/examples/ExampleFaceDetection.js"></script> -->
-    <script src="js/examples/ExampleFaceTracking.js"></script>
+
+	<!--	<script src="js/examples/ExamplePointTracking.js"></script>-->
+	<!--	<script src="js/examples/ExampleFaceDetection.js"></script> -->
+	<script src="js/examples/ExampleFaceTracking.js"></script>
 	<script src="js/examples/ExampleCandideTracking.js"></script>-->
-	
+
 	<!-- 
 		720p/HD webcam examples. These will also need their base classes.
 		e.g. ExampleFaceTracking1280x720.js will need ExampleFaceTracking.js
 	-->
-	
-	<!-- <script src="js/examples/hires/ExamplePointTracking1280x720.js"></script>	--> <!-- needs js/examples/ExamplePointTracking.js -->
-	<!-- <script src="js/examples/hires/ExampleFaceDetection1280x720.js"></script>	--> <!-- needs js/examples/ExampleFaceDetection.js -->
-	<!-- <script src="js/examples/hires/ExampleFaceTracking1280x720.js"></script> 	--> <!-- needs js/examples/ExampleFaceTracking.js -->
-	<!-- <script src="js/examples/hires/ExampleCandideTracking1280x720.js"></script>--> <!-- needs js/examples/ExampleCandideTracking.js -->
-	<!-- <script src="js/examples/specials/ExampleComponentFlow.js"></script>		--> <!-- needs js/examples/ExampleFaceTracking.js -->
-	
+
+	<!-- <script src="js/examples/hires/ExamplePointTracking1280x720.js"></script>	-->
+	<!-- needs js/examples/ExamplePointTracking.js -->
+	<!-- <script src="js/examples/hires/ExampleFaceDetection1280x720.js"></script>	-->
+	<!-- needs js/examples/ExampleFaceDetection.js -->
+	<!-- <script src="js/examples/hires/ExampleFaceTracking1280x720.js"></script> 	-->
+	<!-- needs js/examples/ExampleFaceTracking.js -->
+	<!-- <script src="js/examples/hires/ExampleCandideTracking1280x720.js"></script>-->
+	<!-- needs js/examples/ExampleCandideTracking.js -->
+	<!-- <script src="js/examples/specials/ExampleComponentFlow.js"></script>		-->
+	<!-- needs js/examples/ExampleFaceTracking.js -->
+
 	<!-- single image examples -->
-	
-<!--	<script src="js/examples/images/ExampleFaceTrackingImage.js"></script>
--->	<!--<script src="js/examples/images/ExampleFaceDetectionImage.js"></script> -->
+
+	<!--	<script src="js/examples/images/ExampleFaceTrackingImage.js"></script>
+-->
+	<!--<script src="js/examples/images/ExampleFaceDetectionImage.js"></script> -->
 </head>
 <!-- See example file for the initExample function. -->
+
 <body onload="initExample();">
 
 	<!--
 		This is the canvas for createjs (the stage). You can change the size to any values.
 		You just need to set screenRect to place the video/results at a certain position on that stage.
 	-->
-	<canvas id="_stage" width="640" height="480" style="position:absolute;left:0px;top:0px;">Your browser does not seem to support canvas elements.</canvas>
+	<canvas id="_stage" width="640" height="480" style="position:absolute;left:0px;top:0px;width: 100%;height: 100%;">Your browser does not seem to support canvas elements.</canvas>
 
 	<!--
 		Chrome on Android v35+ supports getUserMedia! But the video needs to be started on user action.
 		This play button will be shown, if a user action is needed.
 	-->
-	<img src="media/assets/play.png" id="btPlay" style="display:none;position:absolute;top:165px;left:221px;"/>
+	<img src="media/assets/play.png" id="btPlay" style="display:none;position:absolute;top:165px;left:221px;" />
 
 	<!--
 		The Beyond Reality Face Nxt logo.
 		Please be fair and don't hide the logo! Thanks.
-	-->
-	<div id="backgroundDiv"  style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: red;"></div>
-	<div id="backgroundDivS"  style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: #12DE4E;"></div>
+	--> 
+	<div id="backgroundDiv" class="blink_me" style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: red;"></div>
+	<div id="backgroundDivS" class="blink_me" style="display:none ;opacity: 0.55;position:absolute;top: 0px;left: 0px;width: 100%;height: 100%;background-color: #12DE4E;"></div>
 	<div id="brfLogo" style="display:none">
 		<a href="https://www.beyond-reality-face.com" target="_blank">
-			<img src="media/assets/brf_nxt_logo_black.png" style="opacity:0.35;position:absolute;top:8px;left:9px;"/>
-			<img src="media/assets/brf_nxt_logo_white.png" style="opacity:0.75;position:absolute;top:7px;left:8px;"/>
+			<img src="media/assets/brf_nxt_logo_black.png" style="opacity:0.35;position:absolute;top:8px;left:9px;" />
+			<img src="media/assets/brf_nxt_logo_white.png" style="opacity:0.75;position:absolute;top:7px;left:8px;" />
 		</a>
 	</div>
 </body>
+
 </html>
