--- a/new webUI/mainDashboard.html
+++ b/new webUI/mainDashboard.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-    <div class="embed-responsive embed-responsive-16by9" style="margin-left: 10%">
+    <div class="embed-responsive embed-responsive-16by9" style="margin-left: 10%; margin-top:2%;" >
         <iframe id="iframeRes" class="embed-responsive-item" src="index.html" style="height: 85%;"></iframe>
     </div>
 
